fix works flickering photo animation

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -783,6 +783,10 @@ body.works main {
   cursor: pointer;
 }
 
+.work-photo.animating {
+  transition: none;
+}
+
 .work-photo.back-back {
   z-index: 1; 
   transform: rotate(8deg) scale(0.95);
